--- a/app/assets/stylesheets/talent.css.scss
+++ b/app/assets/stylesheets/talent.css.scss
@@ -155,7 +155,7 @@
 
   #talent-section #banner-section .content {
     margin: 0;
-    align-items: flex-end;
+    align-items: center;
   }
 
   #talent-section #banner-button {
@@ -182,7 +182,7 @@
   }
 
   #talent-section #banner-section .content a {
-    margin-top: 12rem;
+    margin-top: 4rem;
     align-items: flex-end;
   }
 
